[package]
name = "oatmeal_raisin"
version = "0.0.1"
authors = ["Skyler Lipthay <skyler.lipthay@gmail.com>"]
description = "A cookies plugin for Iron."
readme = "README.md"
license = "MIT"
repository = "https://github.com/SkylerLipthay/oatmeal_raisin"

[dependencies]
cookie = "0.1"
iron = "0.2"
persistent = "0.0"
plugin = "0.2"
